--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+  
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
+      - run: python func.py
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
@@ -24,6 +29,11 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
+      - run: python func.py
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
