--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python func.py
+      - run:  |
+          cd pythonfile
+          python func.py
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
@@ -33,7 +35,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: python func.py
+      - run: |
+          cd pythonfile
+          python func.py
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
