--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: '3.10' 
       - run:  |
           cd pythonfile
-          python func.py $int1 $int2
+          python func.py int1 int2
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
