--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ on:
           description: 'Enter second no'     
           required: true
 
+env:
+  a:${{github.event.inputs.int1}}
+  b:${{github.event.inputs.int1}}
+
 jobs:
   job1:
     runs-on: ubuntu-latest
@@ -23,7 +27,7 @@ jobs:
           python-version: '3.10' 
       - run:  |
           cd pythonfile
-          python func.py int1 int2
+          python func.py $a $b
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
